feat: add @vueuse/core

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {}
+@layer base {
+  body {
+    font-family: "Poppins", sans-serif;
+    @apply font-normal text-sm;
+  }
+}
 @layer components {}
 @layer utilities {}
