--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -7,6 +7,9 @@
     font-family: "Poppins", sans-serif;
     @apply font-normal text-sm;
   }
+  svg {
+    @apply text-xl !mb-0;
+  }
 }
 @layer components {}
 @layer utilities {}
