--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,7 +5,7 @@
 @layer base {
   body {
     font-family: "Poppins", sans-serif;
-    @apply font-normal text-sm;
+    @apply font-normal text-sm text-white bg-main-black;
   }
   svg {
     @apply text-xl !mb-0;
